# operating_systems

./: .gitignore
10_sockets/1_cluster_streams/: CMakeLists.txt  client.c  common.h  server.c
10_sockets/2_cluster_datagrams/: CMakeLists.txt  client.c  common.h  server.c  test_file
1_file_managing_library/: .gitignore  CMakeLists.txt  Makefile  file1.txt  file2.txt  file_managing_library.c  file_managing_library.h  library_loader.c  library_loader.h  library_loader_dynamic.c  library_loader_static.c  main.c  tmp_file
2_file_operations/1_functions_comparision/: .gitignore  CMakeLists.txt  files_operations.c  files_operations.h  main.c  test.sh
2_file_operations/2_find_by_date/: CMakeLists.txt  file_finder.c  file_finder.h  main.c
3_processes/1_find_by_date_process/: CMakeLists.txt  file_finder.c  file_finder.h  main.c
3_processes/2_monitor/: CMakeLists.txt  filelist  main.c  monitor.c  monitor.h  tester.c
4_signals/1_controlled_date_dispatcher/: CMakeLists.txt  date_dispatcher.sh  main.c  process.c  simple.c
4_signals/2_controlled_monitor/: CMakeLists.txt  child_manager.c  child_manager.h  main.c  monitor.c  monitor.h
4_signals/3_sender_catcher/: CMakeLists.txt  catcher  catcher.c  common.c  common.h  safe_catcher  safe_catcher.c  safe_sender  safe_sender.c  sender  sender.c
5_pipes/1_command_executor/: CMakeLists.txt  checker.sh  command  main.c
5_pipes/2_pipe_master_slave/: CMakeLists.txt  master.c  slave.c
6_ipc/1_communicator/: CMakeCache.txt  CMakeLists.txt  Makefile  client  client.c  cmake_install.cmake  communicator.h  echos.txt  echos2.txt  list.txt  server  server.c
7_semaphores_and_shared_memory/1_loading_belt/: belt_loader.h  loader.c  loaders_generator.c  trucker.c
7_semaphores_and_shared_memory/1_loading_belt_posix/: loader.c  loaders_generator.c  trucker.c
7_semaphores_and_shared_memory/1_loading_belt_sv/: CMakeCache.txt  CMakeLists.txt  Makefile  belt_loader.h  cmake_install.cmake  loader  loader.c  trucker  trucker.c
7_semaphores_and_shared_memory/2_loading_belt_posix/: CMakeCache.txt  CMakeLists.txt  Makefile  belt_loader.h  cmake_install.cmake  loader  loader.c  loaders_generator.c  loadingbelt  trucker  trucker.c
8_threads/1_image_filtering/: CMakeLists.txt  Times.txt  main.c
8_threads/1_image_filtering/examples/: brain_398.ascii.pgm  brain_508.ascii.pgm  filter.flt  venus1.ascii.pgm
9_threads_synchronization/1_rollercoaster/: CMakeLists.txt  main.c
libs/sys_ops_commons/: CMakeLists.txt  sys-ops-commons.c  sys-ops-commons.h
