cmake_minimum_required(VERSION 2.8)
set(name_master master)
set(name_slave slave)
project(${name} C)

set(CMAKE_C_STANDARD 99)
set(commons ../../libs/sys_ops_commons)

include_directories(${commons})
add_library(sys_ops_commons ${commons}/sys-ops-commons.c)
add_definitions(-Wall -std=c99)
add_executable(${name_master} master.c)
add_executable(${name_slave} slave.c)
target_link_libraries(${name_master} sys_ops_commons)
target_link_libraries(${name_slave} sys_ops_commons)
