cmake_minimum_required(VERSION 2.8)
set(name_server server)
set(name_client client)
project(Communicator C)

set(CMAKE_C_STANDARD 99)
set(commons ../../libs/sys_ops_commons)

include_directories(${commons})
add_library(sys_ops_commons ${commons}/sys-ops-commons.c)
add_definitions(-Wall -std=c99 -DSV)
add_executable(${name_server} server.c communicator.h)
add_executable(${name_client} client.c communicator.h)
target_link_libraries(${name_server} sys_ops_commons)
target_link_libraries(${name_client} sys_ops_commons)
#target_link_libraries(${name_server} rt)
#target_link_libraries(${name_client} rt)
