cmake_minimum_required(VERSION 2.8)
set(name loadingbelt)
project(${name} C)

set(CMAKE_C_STANDARD 99)
set(commons ../../libs/sys_ops_commons)

include_directories(${commons})
add_library(sys_ops_commons ${commons}/sys-ops-commons.c)
add_definitions(-Wall -std=c99)
add_executable(${name} loaders_generator.c)
add_executable(loader loader.c belt_loader.h)
add_executable(trucker trucker.c)
target_link_libraries(${name} sys_ops_commons)
target_link_libraries(loader sys_ops_commons rt pthread)
target_link_libraries(trucker sys_ops_commons rt pthread)
